fix navbar + add hover, fix overflow-x footer

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -9,6 +9,7 @@
     background-color: linear-gradient(144.02deg, #E4E7FF 31.27%, rgba(255, 255, 255, 0) 97.18%);
     background-size: 88%;
     background-repeat: no-repeat;
+    
 
 }
 
@@ -16,6 +17,8 @@ body {
     font-family: 'Poppins', sans-serif;
     max-width: 1140px;
     margin: auto;
+    overflow-x: hidden;
+
 }
 
 body::-webkit-scrollbar {
@@ -34,6 +37,8 @@ body::-webkit-scrollbar {
     margin-top: 0px;
     margin-bottom: 0px;
     width: 16.125rem;
+    justify-self: center;
+    z-index: 2;
 }
 
 .navbar--options {
@@ -50,6 +55,12 @@ body::-webkit-scrollbar {
 
 .navbar--options li {
     letter-spacing: 0.1rem;
+    transition: color 0.3s ease;
+}
+.navbar--options li:hover {
+    color: var(--tertiary-text-color);
+    cursor: pointer;
+
 }
 
 .navbar--options li:first-child {
@@ -69,9 +80,21 @@ body::-webkit-scrollbar {
     height: 3px;
     background-color: var(--primary-text-color);
     margin: 4px 0;
-    transition: 0.4s;
-
 }
+
+
+.hamburger.active .bar:nth-child(1) {
+    transform: rotate(45deg) translate(6px, 10px);
+}
+
+.hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+}
+
+.hamburger.active .bar:nth-child(3) {
+    transform: rotate(-45deg) translate(6px, -10px);
+}
+
 @media (max-width: 1200px) {
     .navbar--options {
         display: none;
@@ -88,7 +111,7 @@ body::-webkit-scrollbar {
 
     .navbar--options.active {
         display: flex;
-        padding-top: 4rem;
+        padding-top: 6rem;
     }
 
     .navbar--options li {
@@ -99,6 +122,12 @@ body::-webkit-scrollbar {
         display: flex;
         z-index: 3;
     }
+}
+
+
+.blurred {
+    filter: blur(5px); /* Adjust blur intensity as needed */
+    transition: filter 0.3s ease;
 }
 
 .btn {
@@ -233,9 +262,11 @@ body::-webkit-scrollbar {
     background-color: white;
     border-radius: 42px;
 
-    box-shadow: 
+    /* box-shadow: 
     32px 32px 32px rgba(255, 255, 255, 0.6),
-    0px 0px 32px 8px rgba(5, 7, 132, 0.05);
+    0px 0px 32px 8px rgba(5, 7, 132, 0.05); */
+    box-shadow: 0px 25px 50px 25px rgba(246, 247, 255, 1);
+
     padding: 2rem;
     padding-top: 3.6875rem;
     padding-bottom: 1.7rem;
@@ -276,7 +307,7 @@ body::-webkit-scrollbar {
     position: absolute;
     z-index: -1; 
 
-    top: 1400px;
+    top: 1450px;
     max-width: 100vw;
     right: 0;
 }
@@ -424,11 +455,11 @@ body::-webkit-scrollbar {
     align-items: flex-start;
 
     padding-top: 0;
-    margin-bottom: 8.6rem;
+    margin-bottom: 8.85rem;
 
 }
 .expert-cards-section .expert-card:nth-child(2) {
-    box-shadow: 0 16px 32px rgba(91, 98, 226, 0.15);
+    box-shadow: 0px 25px 50px 25px rgba(246, 247, 255, 1);
     transition: box-shadow 0.3s ease-in-out;
     padding-left: 5rem;
     padding-right: 5rem;
@@ -439,6 +470,7 @@ body::-webkit-scrollbar {
 }
 
 .expert-card {
+    
     background-color: white;
     border-radius: 42px;
     padding: 2rem;
@@ -492,7 +524,7 @@ body::-webkit-scrollbar {
 .slide-background-3{
     position: absolute;
     z-index: -1; 
-    right: 18%;
+    left: 0;
     top: 3140px;
     max-width: 100vw;
 }
@@ -542,7 +574,7 @@ body::-webkit-scrollbar {
     color: var(--secondary-text-color);
     font-size: 1rem;
     margin-top: 0;
-    margin-bottom: 3.2rem;
+    margin-bottom: 2.95rem;
     letter-spacing: 0.1rem;
     line-height: 1.5rem;
 }
@@ -815,6 +847,7 @@ body::-webkit-scrollbar {
     }
     .navbar {
         padding: 1rem 4rem;
+        margin-top: 1rem;
     }
     .hero {
         flex-direction: column;
